KB search tweaks and fixes: - should look just fine on mobile devices, - `undefined` responses are properly handled, - i18n added to results.

--- a/webpack/scss/responsive.scss
+++ b/webpack/scss/responsive.scss
@@ -132,10 +132,49 @@
             }
         }
     }
+
+    .search-holder {
+        .btn {
+            padding: 1rem;
+            font-size: 1.25rem;
+        }
+    }
+
+    #knowledge-base-search {
+        .search-holder { padding: 2rem; }
+        .form-holder {
+            display: block;
+            position: relative;
+        }
+        .country-chooser {
+            display: block;
+            width: 100%;
+            margin-bottom: 1rem;
+
+            & > div { line-height: 35px; }
+        }
+        #country-dropdown { top: 70px; }
+        #searchForm {
+            display: block;
+            input[type="submit"] { width: 100%; }
+        }
+        .search-templates {
+            display: block;
+            a {
+                display: inline-block;
+                margin: 0 0.25rem 0.5rem 0;
+                padding: 0.5rem;
+            }
+        }
+
+        input[type="submit"] { padding: 1rem 1.5rem; }
+    }
+
+    html.reveal-breakpoints { border-bottom: 5px solid red; }
 }
 
 @media (min-width: $breakpoint-sm) and (max-width: $breakpoint-md) {
-    .width-4 { width: 41em; }
+    .width-4 { width: 48em; }
     .h1-5 { line-height: 4.25rem; }
     #partners {
         .max-width-4 { max-width: 38em; }
@@ -251,6 +290,13 @@
             }
         }
     }
+
+    #searchForm {
+        input[type="submit"] { padding: 1rem 1.5rem; }
+        #selected-country { width: 185px; }
+    }
+
+    html.reveal-breakpoints { border-bottom: 5px solid orange; }
 }
 
 @media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg) {
@@ -295,6 +341,8 @@
             margin-right: 1rem;
         }
     }
+
+    html.reveal-breakpoints { border-bottom: 5px solid dodgerblue; }
 }
 
 @media (min-width: $breakpoint-lg) {
@@ -306,8 +354,12 @@
             }
         }
     }
+
+    html.reveal-breakpoints { border-bottom: 5px solid forestgreen; }
 }
 
 @media (min-width: $breakpoint-xl) {
-    .width-4 { width: $breakpoint-xl; }
+    .width-4 { width: $breakpoint-lg; }
+
+    html.reveal-breakpoints { border-bottom: 5px dashed black; }
 }
